--- a/EMART-UI/src/app/Seller/viewitems/viewitems.component.html
+++ b/EMART-UI/src/app/Seller/viewitems/viewitems.component.html
@@ -98,6 +98,12 @@
           <form [formGroup]="itemForm">
             <table>
               <tr>
+                <td><div class="form-group">
+                <td><label>ItemId</label></td>            
+                     <td><input type="text" formControlName="id"  class="form-control" /></td>
+              </div></td>
+            </tr>
+              <tr>
               <td><div class="form-group">
               <td><label>ItemName</label></td>            
                    <td><input type="text" formControlName="itemname"  class="form-control" /></td>
