--- a/EMART-UI/src/app/Seller/seller-landing-page/seller-landing-page.component.html
+++ b/EMART-UI/src/app/Seller/seller-landing-page/seller-landing-page.component.html
@@ -3,7 +3,7 @@
           <a><span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776;SELLER DASHBOARD</span></a>
           <a [routerLink]="'ADD ITEMS'">ADD ITEMS</a>
     <a [routerLink]="'VIEW ITEMS'">VIEW ITEMS</a>
-    <a [routerLink]="'VIEW REPORTS'">REPORTS</a>
+    <!-- <a [routerLink]="'VIEW REPORTS'">REPORTS</a> -->
     <a [routerLink]="'VIEW PROFILE'">VIEW PROFILE</a>
     <div class="search-container">
       <form>
@@ -16,7 +16,7 @@
           <a routerLink="/SELLER"><i class="fa fa-home"></i> Dashboard</a>
           <a [routerLink]="'ADD ITEMS'"><i class="fa fa-plus-square"></i> Add Items</a>
       <a [routerLink]="'VIEW ITEMS'"><i class="fa fa-search"></i>View Items</a>
-      <a [routerLink]="'VIEW REPORTS'"><i class="fa fa-history"></i> Reports</a>
+      <!-- <a [routerLink]="'VIEW REPORTS'"><i class="fa fa-history"></i> Reports</a> -->
       <a [routerLink]="'VIEW PROFILE'"><i class="fa fa-user"></i> View Profile</a>
         </div>  
       <footer class="footer">
