--- a/EMART-UI/src/app/Buyer/search/search.component.html
+++ b/EMART-UI/src/app/Buyer/search/search.component.html
@@ -8,7 +8,7 @@
   <div class="card" style="width:250px">
     <img class="img" src="assets/images/{{item.imagename}}" alt="Card image" style="width:100%">
     <div class="card-body">
-      <h4 class="card-title">{{item.itemname}}</h4>
+      <h4 class="card-title">{{item.description}}</h4>
       <h5 class="card-text">ID:{{item.id}}
          Price:{{item.price}} </h5>
       <button type="button" (click)="Buy(item)" class="btn btn-primary" >BuyItem</button>
