--- a/EMART-UI/src/app/Buyer/buyer-landing-page/buyer-landing-page.component.html
+++ b/EMART-UI/src/app/Buyer/buyer-landing-page/buyer-landing-page.component.html
@@ -1,6 +1,6 @@
 <div class="bg-image">
   <nav><div class="topnav">
-    <a><span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776;BUYER DASHBOARD</span></a>
+    <a><span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776;EMART</span></a>
     <a [routerLink]="'SEARCH ITEMS'">SEARCH</a>
   <a [routerLink]="'PURCHASE-HISTORY'">PURCHASE HISTORY</a>
   <a [routerLink]="'VIEW PROFILE-BUYER'">PROFILE</a>
