--- a/EMART-UI/src/app/Admin/admin-landing-page/admin-landing-page.component.html
+++ b/EMART-UI/src/app/Admin/admin-landing-page/admin-landing-page.component.html
@@ -14,6 +14,7 @@
     <a routerLink="/ADMIN"><i class="fa fa-home"></i> DASHBOARD</a>
     <a [routerLink]="'ADD/REMOVE-CATEGORY'"><i class="fa fa-plus-square"></i> Category</a>
   <a [routerLink]="'ADD/REMOVE-SUBCAT'"><i class="fa fa-plus-square"></i> SubCategory</a>
+  <a routerLink="/CONTACT"><i class="fa fa-fw fa-envelope"></i>CONTACT</a>
   </div>  
   <footer class="footer">
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
