--- a/EMART-UI/src/app/Seller/seller-landing-page/seller-landing-page.component.html
+++ b/EMART-UI/src/app/Seller/seller-landing-page/seller-landing-page.component.html
@@ -16,8 +16,8 @@
           <a routerLink="/SELLER"><i class="fa fa-home"></i> Dashboard</a>
           <a [routerLink]="'ADD ITEMS'"><i class="fa fa-plus-square"></i> Add Items</a>
       <a [routerLink]="'VIEW ITEMS'"><i class="fa fa-search"></i>View Items</a>
-      <!-- <a [routerLink]="'VIEW REPORTS'"><i class="fa fa-history"></i> Reports</a> -->
       <a [routerLink]="'VIEW PROFILE'"><i class="fa fa-user"></i> View Profile</a>
+      <a routerLink="/CONTACT"><i class="fa fa-fw fa-envelope"></i>CONTACT</a>
         </div>  
       <footer class="footer">
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
