--- a/EMART-UI/src/app/Admin/add-remove-subcategory/add-remove-subcategory.component.css
+++ b/EMART-UI/src/app/Admin/add-remove-subcategory/add-remove-subcategory.component.css
@@ -159,7 +159,7 @@
         margin-top: 50px ;
     }
     h3{
-      color:white;
+      color:#8B008B;
     }
     .register{
     background-image: url('src/assets/images/additems.jpg');
