--- a/EMART-UI/src/app/Account/register-seller/register-seller.component.html
+++ b/EMART-UI/src/app/Account/register-seller/register-seller.component.html
@@ -80,7 +80,7 @@
             </tr>
                 <div class="text-center">
                 <button class="btn btn-primary mr-1" type="submit" (click)='onSubmit()'>Register</button>
-                <button class="btn btn-primary mr-1" type="reset" (click)='onReset()'>Cancel</button>
+                <button class="btn btn-primary mr-1" type="reset" (click)='onReset()'>Reset</button>
             </div>
         </table>
         </form>
