--- a/EMART-UI/src/app/Buyer/buyer-landing-page/buyer-landing-page.component.html
+++ b/EMART-UI/src/app/Buyer/buyer-landing-page/buyer-landing-page.component.html
@@ -22,7 +22,7 @@
 <a [routerLink]="'PURCHASE-HISTORY'"><i class="fa fa-history"></i>Purchase History</a>
 <a [routerLink]="'VIEW CART'"><i class="fa fa-cart-arrow-down"></i> View Cart</a>
 <a [routerLink]="'VIEW PROFILE-BUYER'"><i class="fa fa-user"></i> Profile</a>
-<a routerLink="/CONTACT"><i class="fa fa-fw fa-envelope"></i>CONTACT</a>
+<a routerLink="/CONTACT"><i class="fa fa-fw fa-envelope"></i>Contact</a>
   </div> 
 <footer class="footer">
   <div class="footer-copyright text-center py-3">© 2020 Copyright:
