--- a/EMART-UI/src/app/Buyer/purchasehistory/purchasehistory.component.html
+++ b/EMART-UI/src/app/Buyer/purchasehistory/purchasehistory.component.html
@@ -10,6 +10,7 @@
                  <th>Transactiontype</th>
                  <th>Item Id</th>
                  <th>Remarks</th>
+                 <th>Date</th>
              </tr>
              <tr *ngFor="let purchasehistory of list">  
                   <td>{{purchasehistory.id}}</td>
@@ -18,6 +19,7 @@
                   <td>{{purchasehistory.transactiontype}}</td>
                   <td>{{purchasehistory.itemid}}</td>
                   <td>{{purchasehistory.remarks}}</td>
+                  <td>{{purchasehistory.datetime|date:'MM-dd-yyyy'}}</td>
              </tr>
             </table>
           </div>   
